--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -138,7 +138,13 @@ main {
 
 
 @media (max-width: 900px) {
-    .news article .article-content {
-        gap: 15px;
+    .news {
+        article .article-content {
+            gap: 15px;
+        }
+
+        .news-navigation {
+            margin-top: 50px;
+        }
     }
 }
