--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -163,6 +163,8 @@ main {
         img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
+            object-position: center;
         }
     }
 
@@ -303,6 +305,35 @@ main {
         .content {
             left: 54px;
             top: 104px;
+        }
+    }
+
+    .section-2 {
+
+        .content {
+            grid-column: 2/5;
+            width: 85%;
+            position: relative;
+            left: 0;
+        }
+
+        .foto-1 {
+            width: 35%;
+        }
+    }
+
+
+    .section-3 {
+
+        .content {
+            grid-column: 3/6;
+            width: 100%;
+            position: relative;
+            left: 50px;
+        }
+
+        .foto-2 {
+            width: 30%;
         }
     }
 }
