--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -32,7 +32,7 @@ header {
 
 main {
     min-height: 100vh;
-    max-width: 2560px;
+    max-width: 2000px;
     margin: auto;
     overflow: hidden;
 }
@@ -61,7 +61,7 @@ header {
 .section-1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 600px 400px;
+    grid-template-rows: 600px 1300px;
     color: var(--blue-dark);
     clip-path: inset(0 0 0 100%);
     transform: translateX(-300px);
@@ -140,6 +140,7 @@ header {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 350px;
+    margin-top: -800px;
 
     .content-top {
         color: var(--blue-extra-light);
