--- a/src/styles/tvarumas.scss
+++ b/src/styles/tvarumas.scss
@@ -149,7 +149,7 @@ header {
 .section-2 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(190px, 1fr);
+    grid-auto-rows: minmax(190px, auto);
     color: var(--blue-dark);
     max-width: 2560px;
     margin: auto;
@@ -168,28 +168,27 @@ header {
     }
    
     @media (min-width: 1500px){
-        grid-auto-rows: minmax(600px, 1fr);
+        grid-auto-rows: minmax(600px, auto);
     }
 
     @media (min-width: 1750px){
-        grid-auto-rows: minmax(700px, 1fr);
+        grid-auto-rows: minmax(700px, auto);
     }
 
     @media (min-width: 2150px){
-        grid-auto-rows: minmax(850px, 1fr);
+        grid-auto-rows: minmax(850px, auto);
     }
 
     @media (min-width: 2400px){
-        grid-auto-rows: minmax(950px, 1fr);
+        grid-auto-rows: minmax(950px, auto);
     }
 
     .animated-opacity {
         font-size: clamp(25px, 5vw, 64px);
         border-bottom: 1px solid var(--blue-dark);
         padding-right: 5%;
-        padding-bottom: 3vw;
+        padding-bottom: 150px;
         margin-bottom: 3vw;
-        width: 100%;
         grid-row: 1;
         grid-column: 1/5;
         transform: translate(13vw, 0vw);
@@ -530,6 +529,10 @@ footer {
 }
 
 @media (max-width: 1200px){
+    .ataskaitos {
+        margin: 100px auto;
+    }
+    
     footer {
         .footer-shape-1 {
             left: -645px;
