--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -1,5 +1,5 @@
 body {
-    background: var(--green-extra-light) !important;
+    background: var(--green-light) !important;
     min-height: auto;
     & > * {
         cursor: url('/icons/cursor-green.svg'), pointer;
