updated header change color

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,7 +11,7 @@ header {
     right: 0;
     z-index: 1000;
     overflow: hidden;
-    mix-blend-mode:multiply;
+    // mix-blend-mode:multiply;
 }
 
 .logo {
