--- a/src/styles/tvarumas.scss
+++ b/src/styles/tvarumas.scss
@@ -12,6 +12,7 @@ button, a, .logo, .right {
 
 
 header {
+    mix-blend-mode: multiply;
     .logo {
         transform: translateY(0%) !important;
         clip-path: inset(0 0 0% 0)!important;
