--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -256,6 +256,7 @@ main {
         }
 
         .button {
+            width: 250px;
             background:  var(--burgundy-dark);
             color: var(--burgundy-extra-light);
             margin-top: 50px;
