--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -48,9 +48,6 @@ main {
     transform: translateX(-300px);
 
     .shape-1 {
-        background: url('/karjera/shape-1.svg');
-        background-repeat: no-repeat;
-        background-size: cover;
         position: absolute;
         top: -50px;
         left: 0px;
@@ -100,6 +97,7 @@ main {
         }
 
         .button {
+            width: 250px;
             background:  var(--burgundy-dark);
             color: var(--burgundy-extra-light);
         }
