--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -195,6 +195,7 @@ main {
         }
 
         .button {
+            width: 250px;
             background: var(--dark-green);
             color: var(--green-light);
         }
@@ -264,6 +265,7 @@ main {
         }
 
         .button {
+            width: 250px;
             background: var(--dark-green);
             color: var(--green-light);
         }
