--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -98,7 +98,7 @@ src: url("/fonts/CircularXXSub-Book.woff2") format("woff2");
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		width: auto;
+		width: 250px;
 		height: 50px;
 		border-radius: 0px 0px 26.5px 0px;
 		background:  var(--green-light);
