--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -7,7 +7,7 @@ body {
 }
 
 button, a, .logo, .right {
-    cursor: url('/icons/pointer-green.svg'), pointer !important;
+    cursor: url('/icons/pointer-green.svg'), pointer;
 }
 
 
@@ -337,21 +337,26 @@ main {
     .managers {
         display: grid;
         grid-template-columns: repeat(4, minmax(200px, 1fr));
-        grid-auto-rows: 280px;
+        grid-auto-rows: 380px;
         gap: 20px;
         margin-top: 70px;
 
         .manager {
-            line-height: 35px;
+            line-height: 45px;
             img {
                 width: 100%;
-                height: 200px;
-                border-radius: 0 100px 0 0;
+                height: 250px;
+                border-radius: 0 90px 0 0;
                 object-fit: cover;
+                margin-bottom: 15px;
             }
 
             .name {
                 font-size: clamp(25px, 2vw, 30px);
+            }
+
+            .ocupation {
+                font-size: clamp(22px, 1.2vw, 25px);
             }
            
         }
