--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -148,6 +148,7 @@ main {
             text-align: end;
             transform: rotate(-90deg);
             position: relative;
+            left: 55%;
             transition: 0.3s;
 
             p {
