--- a/src/styles/tvarumas.scss
+++ b/src/styles/tvarumas.scss
@@ -102,7 +102,7 @@ main {
     .tvarumas-2 {
         object-fit: cover;
         object-position: top;
-        border-radius: 0 171px 0 20px;
+        border-radius: 0 180px 0 98px;
         width: 753px;
         height: 882px;
         z-index: -2;
@@ -120,8 +120,8 @@ main {
         height: 1071.815px;
         z-index: -2;
         position: absolute;
-        right: 0;
-        top: 159px;
+        right: 1px;
+        top: 155px;
     }
 }
 
@@ -132,35 +132,6 @@ main {
     color: var(--blue-dark);
     max-width: 2560px;
     margin: auto;
-    
-    @media (max-width: 1000px){
-        margin-bottom: -150px !important;
-    }
-  
-    @media (min-width: 1300px){
-        grid-auto-rows: minmax(700px, 1fr);
-        overflow: hidden;
-    }
-
-    @media (max-width: 1440px){
-        margin-bottom: -100px;
-    }
-   
-    @media (min-width: 1500px){
-        grid-auto-rows: minmax(600px, auto);
-    }
-
-    @media (min-width: 1750px){
-        grid-auto-rows: minmax(700px, auto);
-    }
-
-    @media (min-width: 2150px){
-        grid-auto-rows: minmax(850px, auto);
-    }
-
-    @media (min-width: 2400px){
-        grid-auto-rows: minmax(950px, auto);
-    }
 
     .animated-opacity {
         font-size: clamp(25px, 5vw, 64px);
@@ -213,7 +184,7 @@ main {
             .tab-content .icons {
                 display: flex;
                 gap: 50px;
-
+        
                 .icon {
                     text-align: center;
                     display: flex;
@@ -230,7 +201,7 @@ main {
             }
     
             img {
-                width: clamp(40px, 6vw, 81px);
+                width: clamp(40px, 4vw, 81px);
                 transition: 0.3s;
             }
     
@@ -241,7 +212,6 @@ main {
     
             p {
                 width: 60%;
-                font-size: clamp(14px, 2vw, 25px);
                 margin-bottom: 30px;
             }
         }
@@ -301,7 +271,7 @@ main {
     color: var(--blue-dark);
 
     h3 {
-        margin-bottom: 60px;
+        margin-bottom: 30px;
     }
 
     .content {
@@ -310,18 +280,17 @@ main {
         grid-auto-rows: 100px;
         align-items: center;
         border-bottom: 1px solid var(--blue-dark);
-        padding-bottom: 30px;
-        margin-bottom: 30px;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
 
         h4 {
-          
             width: 100%;
         }
 
         .icon {
        
             img {
-                width: clamp(40px, 6vw, 81px);
+                width: clamp(40px, 4vw, 81px);
             }
         }
       
