--- a/src/styles/darbo-skelbimai.scss
+++ b/src/styles/darbo-skelbimai.scss
@@ -197,8 +197,18 @@ footer {
         }
     }
 
-    .copywrites, .copywrites a {
+
+    .copywrites {
         color: var(--burgundy-extra-light) !important;
+        a {
+            color: var(--burgundy-extra-light) !important;
+            cursor: url("/icons/pointer-burgundy.svg"), pointer !important;
+
+             &::before {
+
+                background:  var(--burgundy-extra-light) !important;
+            }
+        }
     }
 }
 
