--- a/src/styles/mentoryste.scss
+++ b/src/styles/mentoryste.scss
@@ -141,10 +141,6 @@ main {
 }
 
 
-
-
-
-
 footer {
     color: var(--burgundy-extra-light) !important;
     margin-top: 150px;
@@ -155,8 +151,17 @@ footer {
         }
     }
 
-    .copywrites, .copywrites a {
+
+    .copywrites {
         color: var(--burgundy-extra-light) !important;
+        a {
+            color: var(--burgundy-extra-light) !important;
+            cursor: url("/icons/pointer-burgundy.svg"), pointer !important;
+
+             &::before {
+
+                background:  var(--burgundy-extra-light) !important;
+            }
+        }
     }
 }
-
