--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -379,8 +379,14 @@ header {
   
 }
 
+
 footer {
-    color: var(--blue-extra-light);
+    color: var(--blue-extra-light) !important;
+    margin-top: 150px;
+
+    a {
+        color: var(--blue-extra-light) !important;
+    }
 
     .social {
         a:before {
@@ -388,10 +394,21 @@ footer {
         }
     }
 
-    .copywrites a {
-        color: var(--blue-extra-light);
+
+    .copywrites {
+        color: var(--blue-extra-light) !important;
+        a {
+            color: var(--blue-extra-light) !important;
+            cursor: url("/icons/pointer-blue.svg"), pointer !important;
+
+             &::before {
+
+                background:  var(--blue-extra-light) !important;
+            }
+        }
     }
 }
+
 
 
 @media (max-width: 1025px){
