--- a/src/styles/tabs.scss
+++ b/src/styles/tabs.scss
@@ -14,8 +14,9 @@
         background: none;
         border: none;
         color: var(--dark-green);
-        padding: 10px;
         position: relative;
+        width: 30vw;
+        max-width: 250px;
     }
 
     button:hover::before {
