--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -314,9 +314,9 @@ main {
         }
 
         .content-right {
-            width: auto;
-            position: static;
-            transform: rotate(0deg) translateY(50px);
+            width: auto !important;
+            position: static !important;
+            transform: rotate(0deg) translateY(50px) !important;
             opacity: 0;
           
         }
@@ -447,6 +447,7 @@ main {
         }
     }
 }
+
 
 footer {
     color: var(--burgundy-extra-light) !important;
