verslo invaciju update

--- a/src/styles/darbo-skelbimai.scss
+++ b/src/styles/darbo-skelbimai.scss
@@ -128,7 +128,7 @@ main {
 
        .more {
             display: block;
-            color: var(--burgundy-dark);
+            color: var(--burgundy-spot);
             text-decoration: underline;
             text-align: center;
             margin: 30px auto;
