--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -1,8 +1,7 @@
 body {
     background: var(--green-light);
     min-height: auto;
-    & > *,
-    a {
+    & > * {
         cursor: url('/icons/cursor-green.svg'), pointer;
     }
 }
@@ -10,6 +9,7 @@ body {
 button, a, .logo, .right {
     cursor: url('/icons/pointer-green.svg'), pointer;
 }
+
 
 header {
     .logo {
