--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -48,6 +48,8 @@ main {
         grid-column: 2/5;
         grid-row: 1;
         align-self: end;
+        position: relative;
+        top: -50px
      }
 
     .content {
@@ -60,6 +62,7 @@ main {
         grid-row: 2;
         right: 1116px;
         color: var(--dark-green);
+        margin-top: -100px;
 
         h2 {
             margin: 50px 0;
